Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-7023

There is a race condition between vbucket deletion and recreation.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 2.0
    • 2.0
    • couchbase-bucket
    • Security Level: Public
    • None

    Description

      resetVBucket() internally deletes the vbucket from memory and disk, and recreate the empty vbucket in memory and disk. If there are any dirty items for that vbucket between these two operations,, we might not persist those dirty items.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              chiyoung Chiyoung Seo (Inactive)
              chiyoung Chiyoung Seo (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty