MB-7023 Fix to race conditions between vbucket delete and recreate

resetVBucket() internally deletes the vbucket from memory and
disk, and recreate the empty vbucket in memory and disk. If there
are any dirty items for that vbucket between these two
operations, we might not persist those dirty items.

Change-Id: I41d5f210978545e491056a075531b16a1c92979d
Reviewed-on: http://review.couchbase.org/21978
Reviewed-by: Jin Lim <jin@couchbase.com>
Tested-by: Jin Lim <jin@couchbase.com>